# testTransaction

./: .gitignore  Dockerfile  READMI.md  docker-compose.yml  pyproject.toml
app/: .env  config.py  consumer.py  db.py  main.py  models.py  raises.py  schemas.py  services.py
migrations/: env.py
migrations/versions/: a8c7c6db636e_.py  bd754b9a7472_init.py  e8c41908dd00_.py
