[tool.poetry]
name = "testtransaction"
version = "0.1.0"
description = ""
authors = ["borovskiy <borovskiy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.123.9"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = "^2.0.44"
asyncpg = "^0.31.0"
alembic = "^1.17.2"
pydantic = "^2.12.5"
faststream = {extras = ["kafka"], version = "^0.6.3"}
kafka-python = "^2.3.0"
pydantic-settings = "^2.12.0"
aiohttp = "^3.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
